# MENTAT

./: .gitignore  .pre-commit-config.yaml  LICENCE  baseline_rollout.py  beam_search.py  benchmark_hf.py  configs.txt  download_from_hf.py  dpo_candidates.jsonl  entry.py  eval_harness.py  generate_dpo_candidates.py  generator.py  generator_utils.py  mentat_rollout.py  mentat_server.py  paged_attention_injector.py  paged_kv_cache.py  pyproject.toml  requirements.txt  run_uq.py  test_paged_kv_cache.py  uq_dashboard.html  uq_results.json
adapters/: adapter_factory.py  attention_backend.py  llama_adapter.py  model_adapter.py  qwen3_adapter.py
core/: generator.py  generator_utils.py  paged_attention_triton.py  paged_kv_cache.py
models/: attn_paged.py
models/denseformer/: modeling_denseformer.py
models/hyperconnections/: configuration_dhc.py  hyper_connections.py  modeling_dhc.py
models/hyperresformer/: attn.py  configuration_hyperresformer.py  modeling_hyperresformer.py
models/muddformer/: attn.py  modeling_muddformer.py
models/qwen3/: configuration_qwen3.py  modeling_qwen3.py
models/resformer/: attn.py  configuration_resformer.py  modeling_resformer.py
models/transformer/: configuration_transformer.py  modeling_transformer.py
utils/: download_from_hf.py  shared.py  visualize_tree.py
