[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "mentat"
version = "1.0"
description = "Prefix-tree sampling rollouts for LLMs."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [
    { name = "Skye Gunasekaran", email = "akgunase@ucsc.edu" }
]
dependencies = [
    "torch>=2.0.0",
    "transformers>=4.40.0",
    "datasets>=2.18.0",
    "einops>=0.7.0",
    "accelerate>=0.29.0",
    "jinja2>=3.1.0",      
    "pyvis>=0.3.2",       
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "flash-attn>=2.0.1",
    "ruff>=0.3.0",        
    "pre-commit>=3.7.0",
]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I"] 
ignore = ["E501"]        